fixed formatting for readability, as well as javascript errors

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ img {
 body {
     background-color: rgb(15, 5, 34);
     width: 960px;  
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: auto;
 }
 
@@ -35,11 +35,13 @@ p {
 ul {
     color:white;
     padding-top: 30px;
+    font-size: 20px;
 }
 
 ol {
     color:white;
     padding-top: 30px;
+    font-size: 20px;
 }
 
 footer {
